[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortis-l7-env"
version = "1.0.0"
description = "L7 API traffic mitigation environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29.0",
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "openenv-core>=0.1.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
]

[project.scripts]
server = "server.app:main"
